--- a/Koting/Koting/View/ChatStoryboard.storyboard
+++ b/Koting/Koting/View/ChatStoryboard.storyboard
@@ -18,7 +18,7 @@
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="채팅" image="message" catalog="system" selectedImage="message.fill" id="hPF-Z7-T75"/>
+                    <tabBarItem key="tabBarItem" title="" image="message" catalog="system" selectedImage="message.fill" id="hPF-Z7-T75"/>
                     <navigationItem key="navigationItem" title="채팅" id="F8D-d8-VOo"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
